load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/minorhacks/bazel_remote_query
gazelle(name = "gazelle")

gazelle(
    name = "gazelle_update_repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=bazel/deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
