load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dispatch",
    srcs = ["dispatch.go"],
    importpath = "github.com/minorhacks/bazel_remote_query/dispatch",
    visibility = ["//visibility:public"],
    deps = [
        "//db",
        "//proto",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
