load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "dispatcher_lib",
    srcs = ["main.go"],
    importpath = "github.com/minorhacks/bazel_remote_query/dispatcher",
    visibility = ["//visibility:private"],
    deps = [
        "//proto",
        "@com_github_golang_glog//:glog",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_binary(
    name = "dispatcher",
    embed = [":dispatcher_lib"],
    visibility = ["//visibility:public"],
)
