load("@rules_proto//proto:defs.bzl", "proto_library")
load("//bazel:defs.bzl", "go_grpc_proto_library")

proto_library(
    name = "worker_proto",
    srcs = ["worker.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_grpc_proto_library(
    name = "worker_go_proto",
    importpath = "github.com/minorhacks/bazel_remote_query/proto",
    protos = [":worker_proto"],
    visibility = ["//visibility:public"],
)
