load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//bazel:defs.bzl", "go_grpc_proto_library")

proto_library(
    name = "worker_proto",
    srcs = ["worker.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_grpc_proto_library(
    name = "worker_go_proto",
    importpath = "github.com/minorhacks/bazel_remote_query/proto",
    protos = [":worker_proto"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":minorhacks_bazel_remote_query_go_proto"],
    importpath = "github.com/minorhacks/bazel_remote_query/proto",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "minorhacks_bazel_remote_query_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/minorhacks/bazel_remote_query/proto",
    proto = ":worker_proto",
    visibility = ["//visibility:public"],
)
