load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "queue",
    srcs = ["queue.go"],
    importpath = "github.com/minorhacks/bazel_remote_query/queue",
    visibility = ["//visibility:public"],
    deps = [
        "//db",
        "//proto",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
