load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "queue",
    srcs = ["queue.go"],
    importpath = "github.com/minorhacks/bazel_remote_query/queue",
    visibility = ["//visibility:public"],
    deps = [
        "//db",
        "//proto",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "queue_test",
    srcs = ["queue_test.go"],
    embed = [":queue"],
    deps = [
        "//db",
        "//proto",
        "//testutil",
        "@com_github_prashantv_gostub//:gostub",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
