load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "worker_lib",
    srcs = ["main.go"],
    importpath = "github.com/minorhacks/bazel_remote_query/worker",
    visibility = ["//visibility:private"],
    deps = [
        "//proto",
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//config",
        "@com_github_go_git_go_git_v5//plumbing",
        "@com_github_golang_glog//:glog",
        "@com_google_cloud_go_storage//:storage",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_protobuf//encoding/prototext",
    ],
)

go_binary(
    name = "worker",
    embed = [":worker_lib"],
    visibility = ["//visibility:public"],
)
