load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "sqlite",
    srcs = ["sqlite.go"],
    importpath = "github.com/minorhacks/bazel_remote_query/db/sqlite",
    visibility = ["//visibility:public"],
    deps = [
        "//db",
        "@com_github_google_uuid//:uuid",
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
    ],
)
